<resources>
    <string name="app_name">Alert Dialog</string>

    <string name="close">Close</string>
    <string name="settings">Settings</string>
    <string name="permission_never_ask_again_alert_dialog_message">Kindly allow Camera Permission from Settings, without this permission the app is unable to provide photo capture feature.\n\nPlease turn on permissions at [Setting] -> [Permissions]></string>
    <string name="camera_permission">Camera Permission</string>
    <string name="permission_denied_then_alert_dialog_message">Kindly allow Camera Permission, without this permission the app is unable to provide photo capture feature</string>
    <string name="ok">OK</string>
</resources>
