<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/permissionNeverAskAgainAlertDialogParentLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_10sdp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:background="@drawable/dialog_heading_colorful_background"
        android:gravity="center">

        <ImageView
            android:id="@+id/permissionIconImageView"
            android:layout_width="@dimen/_32sdp"
            android:layout_height="@dimen/_32sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:contentDescription="@string/app_name"
            android:gravity="center"
            android:src="@drawable/permission_ic_camera"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/permissionNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/camera_permission"
            android:textSize="@dimen/_20sdp"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_content_colorful_background"
        android:orientation="vertical">

        <TextView
            android:id="@+id/explainWhyThisRequireTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="@dimen/_10sdp"
            android:text="@string/permission_never_ask_again_alert_dialog_message"
            android:textSize="@dimen/_10sdp"
            android:textColor="@color/black" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/dark_gray" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/closeButtonTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:background="@drawable/dialog_left_button_colorful_background"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:shadowColor="@android:color/transparent"
            android:text="@string/close"
            android:textSize="@dimen/_20sdp"
            android:textColor="@color/white" />

        <View
            android:layout_width="@dimen/_1sdp"
            android:layout_height="match_parent"
            android:background="@color/dark_gray" />

        <TextView
            android:id="@+id/settingButtonTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:background="@drawable/dialog_right_button_colorful_background"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:shadowColor="@android:color/transparent"
            android:text="@string/settings"
            android:textSize="@dimen/_20sdp"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>